Added a first set of neccessary base classes and interfaces.

--- a/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
+++ b/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
@@ -64,6 +64,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\ND.PantryPlanner.Common\ND.PantryPlanner.Common.csproj" />
 	  <ProjectReference Include="..\ND.PantryPlanner.DataLayer\ND.PantryPlanner.DataLayer.csproj" />
 	  <ProjectReference Include="..\ND.PantryPlanner.EntityLayer\ND.PantryPlanner.EntityLayer.csproj" />
 	  <ProjectReference Include="..\ND.PantryPlanner.ViewModelLayer\ND.PantryPlanner.ViewModelLayer.csproj" />
