--- a/ND.PantryPlanner.DataLayer/ND.PantryPlanner.DataLayer.csproj
+++ b/ND.PantryPlanner.DataLayer/ND.PantryPlanner.DataLayer.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ND.PantryPlanner.Common\ND.PantryPlanner.Common.csproj" />
+    <ProjectReference Include="..\ND.PantryPlanner.EntityLayer\ND.PantryPlanner.EntityLayer.csproj" />
+  </ItemGroup>
+
 </Project>
