--- a/ND.PantryPlanner.EntityLayer/ND.PantryPlanner.EntityLayer.csproj
+++ b/ND.PantryPlanner.EntityLayer/ND.PantryPlanner.EntityLayer.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ND.PantryPlanner.Common\ND.PantryPlanner.Common.csproj" />
+  </ItemGroup>
+
 </Project>
