feat: enhance project structure and documentation
* Added `CallerMemberName` attribute usage in `CommonBase.cs`
* Improved XML documentation in multiple files
* Added `CommandClasses` folder to project
* Removed empty `Class1` class from ViewModelLayer
* Added project references in `ViewModelLayer.csproj`
* Ensured database initialization in `MauiProgram.cs`
* Expanded `README.md` with detailed project info
* Introduced `ItemViewModel` class with repository integration

--- a/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
+++ b/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
@@ -70,4 +70,8 @@
 	  <ProjectReference Include="..\ND.PantryPlanner.ViewModelLayer\ND.PantryPlanner.ViewModelLayer.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="CommandClasses\" />
+	</ItemGroup>
+
 </Project>
