feat: Replace EntityLayer with ModelLayer
* Removed EntityLayer project and added ModelLayer project
* Updated namespaces from ND.PantryPlanner.EntityLayer to ND.PantryPlanner.ModelLayer
* Replaced EntityBase class with ModelBase class
* Updated Item class to inherit from ModelBase
* Changed ItemRepository to use Item class from ModelLayer
* Updated DatabaseInitializer with new subfolder path
* Updated project references to ModelLayer in various .csproj files
* Updated AppShell.xaml with correct namespace for views
* Re-added MainPage.xaml and MainPage.xaml.cs with updated namespaces
* Added disclaimer to README.md about GitHub Copilot usage
* Re-added ItemType and LocationType enums in ModelLayer namespace
* Re-added ItemViewModel class with updated references to ModelLayer
* Added new ND.PantryPlanner.ModelLayer.csproj file for ModelLayer project

--- a/ND.PantryPlanner.DataLayer/ND.PantryPlanner.DataLayer.csproj
+++ b/ND.PantryPlanner.DataLayer/ND.PantryPlanner.DataLayer.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ND.PantryPlanner.Common\ND.PantryPlanner.Common.csproj" />
-    <ProjectReference Include="..\ND.PantryPlanner.EntityLayer\ND.PantryPlanner.EntityLayer.csproj" />
+    <ProjectReference Include="..\ND.PantryPlanner.ModelLayer\ND.PantryPlanner.ModelLayer.csproj" />
   </ItemGroup>
 
 </Project>
