--- a/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
+++ b/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
@@ -72,6 +72,7 @@
 
 	<ItemGroup>
 	  <Folder Include="CommandClasses\" />
+	  <Folder Include="Resources\Localization\" />
 	</ItemGroup>
 
 </Project>
