refactor: update repository, initializer, and add schemas
* Refactor ItemRepository.cs: move class, re-add usings, reintroduce methods
* Update DatabaseInitializer.cs: add using, reference Schemas.DatabaseSchema
* Modify ND.PantryPlanner.DataLayer.csproj: add ItemGroup for Services folder
* Add IService.cs: define empty IService interface
* Add Schemas.cs: define Schemas class with DatabaseSchema constant

--- a/ND.PantryPlanner.DataLayer/ND.PantryPlanner.DataLayer.csproj
+++ b/ND.PantryPlanner.DataLayer/ND.PantryPlanner.DataLayer.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\ND.PantryPlanner.ModelLayer\ND.PantryPlanner.ModelLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
