feat: add German localization support
* Introduce localization support with German (de-DE) resources
* Set application culture to German in `App.xaml.cs`
* Update `ND.PantryPlanner.MAUI.csproj` to embed German resources
* Specify German as resource language in `Package.appxmanifest`
* Replace static text with localized strings in `MainPage.xaml`
* Add `AppResources.de` and `AppResources.de.resx` for German translations
* Auto-generate `AppResources.Designer.cs` for resource access
* Add `AppResources.en.resx` and `AppResources.resx` for English and default resources

--- a/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
+++ b/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
@@ -37,6 +37,7 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 		<AssemblyName>ND.PantryPlanner</AssemblyName>
+		<NeutralLanguage>en</NeutralLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -58,6 +59,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Localization\AppResources.de" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Resources\Localization\AppResources.de">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
@@ -71,7 +84,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Resources\Localization\" />
+	  <Compile Update="Resources\Localization\AppResources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>AppResources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Resources\Localization\AppResources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
