feat: add localization support and UI updates
* Add localized string properties in AppResources.Designer.cs
* Add German and English translations in .resx files
* Update XAML files to use localized strings
* Introduce ItemTypeDe enum for German item types
* Conditionally include Android resources in .csproj
* Add comments and TODO in ItemTypeRepository.cs
* Set MaximumWidthRequest for description label in HeaderView.xaml

--- a/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
+++ b/ND.PantryPlanner.MAUI/ND.PantryPlanner.MAUI.csproj
@@ -40,7 +40,11 @@
 		<NeutralLanguage>en</NeutralLanguage>
 	</PropertyGroup>
 
-	<ItemGroup>
+  <ItemGroup Condition="$(TargetFramework.Contains('-android'))">
+    <AndroidResource Include="Platforms\Android\Resources\**" TargetPath="%(RecursiveDir)%(Filename)%(Extension)" />
+  </ItemGroup>
+
+  <ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
